# jaybrain

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  AUDITOR_CLAUDE.md  BUILD_QUEUE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
auditor/: CLAUDE.md
dev_journal/: DEVSCRIBE_CODEX.md  DEV_JOURNAL_INDEX.md
dev_journal/2026-02/: JayBrain_DevJournal_2026-02-08.md
docs/: Accounts_Services.md  BUILD_QUEUE.md  JJ_Projects.md  JayBrain_MCP_Tools.md  JayBrain_Tools.md  Learning_Resources.md  Lists_Index.md  MISTAKES_LOG.md  Professional_Orgs.md  RCA_FLOW.md
docs/claude/: QUIZ_RULES.md
scripts/: auditor_dashboard.py  backup_forge.py  bw_unlock.ps1  create_job_sheet.py  create_life_domains_doc.py  daemon_watchdog.py  fix_sy0701_coverage.py  load_boards.py  load_sy0701.py  map_bloom_levels.py  migrate_tracker.py  precompact_hook.py  run_auditor.py  schedule_briefing.bat  schedule_briefing.ps1  session_hook.py  setup_daily_briefing.ps1  setup_gmail_app_password.py  start_daemon.py  start_gramcracker.py  update_life_domains_doc.py  vault_sync_now.py
src/jaybrain/: __init__.py  __main__.py  applications.py  browser.py  cleanup.py  config.py  consolidation.py  conversation_archive.py  cram.py  daemon.py  daily_briefing.py  db.py  deep_recall.py  event_discovery.py  feedly.py  file_watcher.py  forge.py  gdocs.py  git_shadow.py  graph.py  heartbeat.py  homelab.py  incidents.py  interview_prep.py  job_boards.py  jobs.py  knowledge.py  life_domains.py  memory.py  models.py  network_decay.py  news_feeds.py  onboarding.py  personality.py  profile.py  pulse.py  queue.py  resume_tailor.py  scraping.py  scratch.py  (+10 more)
tests/: conftest.py  test_applications.py  test_browser.py  test_cleanup.py  test_config.py  test_consolidation.py  test_conversation_archive.py  test_daemon.py  test_daemon_hardening.py  test_daily_briefing.py  test_db.py  test_deep_recall.py  test_event_discovery.py  test_feedly.py  test_file_watcher.py  test_forge.py  test_forge_v2.py  test_gdocs.py  test_git_shadow.py  test_graph.py  test_heartbeat.py  test_homelab.py  test_incidents.py  test_interview_prep.py  test_job_boards.py  test_jobs.py  test_knowledge.py  test_life_domains.py  test_memory.py  test_models.py  test_network_decay.py  test_news_feeds.py  test_onboarding.py  test_personality.py  test_precompact_hook.py  test_profile.py  test_pulse.py  test_queue.py  test_resume.py  test_scraping.py  (+10 more)
