[project]
name = "jaybrain"
version = "0.1.0"
description = "Personal AI memory server for Claude Code - persistent memory, user profiling, task tracking, and knowledge management"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3",
    "pydantic>=2.11",
    "onnxruntime>=1.18",
    "tokenizers>=0.21",
    "sqlite-vec>=0.1.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "anthropic>=0.40",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
render = [
    "playwright>=1.40",
]
stealth = [
    "patchright>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = [
    "B101",  # assert usage (fine in non-production code)
    "B110",  # try/except/pass (intentional cleanup blocks)
    "B112",  # try/except/continue (intentional cleanup)
    "B311",  # random.choice (not used for crypto)
    "B404",  # subprocess import (needed for browser/daemon)
    "B603",  # subprocess without shell=True (safe -- no user input)
    "B607",  # partial executable path (system commands)
    "B310",  # urllib.urlopen (only used for localhost/known API URLs)
    "B608",  # SQL f-string construction (internal column names, not user input)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
